[package]
name = "nmp-nip02"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository.workspace = true
description = "NIP-02 (Follow List, kind:3) + NIP-25 (Reactions, kind:7) ActionModules — substrate-level social-graph primitives. The crate name reflects the originating substrate seam (NIP-02 follow lists are the core social primitive); the kind:7 reaction module is co-located here because Follow/Unfollow/React form the minimal social-verb cluster every Nostr client implements and they share the `nmp.*` namespace shape that D9 requires of every protocol crate."

[lib]
crate-type = ["rlib"]

[dependencies]
# `nmp-core` supplies the `ActionModule` trait this crate's modules implement,
# the `ActorCommand` variants the executors enqueue (`React`, `Follow`,
# `Unfollow` — kept generic in core because the actor owns the kind:3/kind:7
# build + sign step on its thread per D7), the `KernelEvent` /
# `KernelEventObserver` ingest seam the `FollowListProjection` plugs into,
# and the app-neutral `ActionRegistrar` seam `register_actions` calls.
nmp-core = { path = "../nmp-core" }
# `nostr` supplies `PublicKey::parse` + `ToBech32` for the npub display
# helpers the `FollowListProjection` uses to pre-format follow rows for the
# host shell. Only `std` is needed — no crypto features (NIP-44 / NIP-59) are
# required here, in contrast to `nmp-nip17` which seals/unseals gift-wraps.
nostr = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
# Brings in `nmp_app_new` / `nmp_app_free` so the integration tests can
# exercise `register_actions` end-to-end against a real `NmpApp` — same
# pattern the other `nmp-nip*` crates use.
nmp-core = { path = "../nmp-core", features = ["test-support"] }
nmp-ffi = { path = "../nmp-ffi", features = ["test-support"] }
