[package]
name = "nmp-nip18"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository.workspace = true
description = "NIP-18 repost decoding primitives for NMP protocol projections."

[dependencies]
nmp-core = { path = "../nmp-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
