[package]
name = "nmp-nip22"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "NIP-22 comments (kind:1111, standalone — non-NIP-29) as an NMP protocol crate — pure decoder (root/parent pointers) + CommentBuilder + DomainModule + CommentsView per docs/design/kind-wrappers.md §3."

[dependencies]
nmp-core = { path = "../nmp-core" }
nmp-threading = { path = "../nmp-threading" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nmp-core = { path = "../nmp-core", features = ["test-support"] }
