[package]
name = "nmp-nip29"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "NIP-29 relay-based groups as an NMP protocol crate. Owns every h-tagged event regardless of kind; declares host-relay-pinned routing via the third lane (Rule 9)."

[dependencies]
nmp-core = { path = "../nmp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nmp-core = { path = "../nmp-core", features = ["test-support"] }
