[package]
name = "nmp-nip29"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository.workspace = true
description = "NIP-29 relay-based groups as an NMP protocol crate. Owns every h-tagged event regardless of kind; declares host-relay-pinned routing via the third lane (Rule 9)."

[dependencies]
nmp-core = { path = "../nmp-core" }
# `nmp-ffi` owns the `NmpApp` C-ABI handle (extracted from
# `nmp-core::ffi` in step 11-final). `register_actions` takes
# `&mut NmpApp`, so this crate names the handle through `nmp-ffi`.
nmp-ffi = { path = "../nmp-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nmp-core = { path = "../nmp-core", features = ["test-support"] }
nmp-ffi = { path = "../nmp-ffi", features = ["test-support"] }
