[package]
name = "nmp-nip42"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "NIP-42 relay AUTH as an NMP protocol crate. Owns the kind:22242 builder, AUTH/OK frame parsers, and the per-relay handshake driver; the wire-frame pause/flush is owned by nmp-core::subs::AuthGate."

[dependencies]
nmp-core = { path = "../nmp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nmp-core = { path = "../nmp-core" }
